# bilibili-video-reading

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SPEC.md  install.md  skill-cli-boundary.md
docs/changes/2026-06-15-cli-install-public-readiness/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SPEC.md
docs/changes/2026-06-15-cli-sync-skill-command/: DECISIONS.md  ROADMAP.md  SPEC.md
docs/changes/2026-06-15-cli-version-command/: DECISIONS.md  ROADMAP.md  SPEC.md
scripts/: check_install.sh  install.sh  install_cli.sh  install_command.sh  install_remote.sh  package_release.sh  sync_skill.sh  update_cli.sh
skill/: SKILL.md
skill/agents/: openai.yaml
skill/references/: asr-ocr-fallback.md  manual-devtools-fallback.md
src/bilibili_video_reading/: __init__.py  asr.py  bilibili.py  cli.py  common.py  diagnose.py  manifest.py  media.py  net.py  release.py  subtitles.py  tools.py
tests/: test_core.py
