[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-video-reading"
version = "0.1.0"
description = "Deterministic CLI helpers for reading Bilibili video content."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bvr = "bilibili_video_reading.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
